--- a/react-flask-app/src/components/styles/Containers.css
+++ b/react-flask-app/src/components/styles/Containers.css
@@ -15,6 +15,7 @@
 
 .console-container {
   width: 95%;
+  position: relative;
 }
 
 .encode-container {
@@ -25,6 +26,8 @@
   font-family: courier, monospace;
   color: #fff;
   height: 350px;
+  overflow: scroll;
+  max-height: 100%;
   margin-left: auto;
   margin-right: auto;
   font-size: 14px;
